@@ -124,6 +124,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #21549: Added the "members" parameter to TarFile.list().
+
 - Issue #19628: Allow compileall recursion depth to be specified with a -r
   option.
 
